# TokenJ

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md  start.bat
.github/workflows/: ci.yml
.trae/: mcp.json  tokenj_mcp.bat
scripts/: seed_demo_data.py  test_batch_wrapper.py  test_mcp.py  tokenj_mcp_server.py  verify.py
src/: cert.rs  config.rs  dashboard.rs  db.rs  lib.rs  main.rs  pricing.rs
src/provider/: anthropic.rs  deepseek.rs  gemini.rs  gemini_cache.rs  mod.rs  openai.rs
src/proxy/: mod.rs  tls.rs
tasks/: prd-tokenj-cache.md  run_log.md  测试验证评估报告.md
tests/: cert_integration.rs  db_integration.rs  pricing_integration.rs  provider_integration.rs
