[package]
name = "tokenj"
version = "0.2.0"
edition = "2021"
description = "Automatic LLM API cache optimizer - save up to 90% on API costs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / TLS
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
rustls = "0.23"
rustls-pki-types = "1"
tokio-rustls = "0.26"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }

# HTTP client for forwarding
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"
tracing = "0.1"

# Time
time = "0.3"
